# relay

./: .appveyor.yml  .codecov.yml  .craft.yml  .dockerignore  .envrc  .flake8  .freight.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  404.html  APPLY_FIX_INSTRUCTIONS.md  ARROYO_FIX_README.md  Brewfile  CHANGELOG.md  COMPLETION_REPORT.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.alpine  Dockerfile.build  Dockerfile.builder  Dockerfile.debian  Dockerfile.lambda-extension  Dockerfile.publish  Dockerfile.release  FINAL_REPORT.txt  FIX_COMPLETE.md  FIX_STATUS.md  FIX_SUMMARY.md  HOWTOAI.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  KAFKA_METRICS_FIX_README.md  KAFKA_OPTIMIZATION_SUMMARY.md  LICENSE  Makefile  OVERFLOW_FIX_SUMMARY.md  (+77 more)
aorta/: Cargo.toml
aorta/src/: api.rs  auth.rs  client.rs  config.rs  event.rs  lib.rs  projectstate.rs  query.rs  upstream.rs  utils.rs
cabi/: Cargo.toml  Makefile  cbindgen.toml
cabi/include/: relay.h  semaphore.h  smith.h
cabi/src/: aorta.rs  auth.rs  core.rs  lib.rs  processing.rs  utils.rs
common/: Cargo.toml
common/src/: auth.rs  config.rs  dsn.rs  glob.rs  lib.rs  log.rs  macros.rs  metrics.rs  project_id.rs  retry.rs  types.rs  upstream.rs  utils.rs
config/: Cargo.toml
config/src/: lib.rs  types.rs  upstream.rs
general/: Cargo.toml  README.md
general/benches/: benchmarks.rs
general/derive/: Cargo.toml
general/derive/src/: empty.rs  lib.rs  process.rs
general/fixtures/payloads/: legacy_js_message.json  legacy_js_onerror.json  legacy_js_promise.json  legacy_node_exception.json  legacy_node_message.json  legacy_node_onerror.json  legacy_node_promise.json
general/src/: lib.rs  macros.rs  reason.rs  testutils.rs  user_agent.rs
general/src/datascrubbing/: config.rs  convert.rs  mod.rs
general/src/filter/: browser_extensions.rs  client_ip.rs  client_ips.rs  common.rs  config.rs  csp.rs  error_message.rs  error_messages.rs  legacy_browsers.rs  localhost.rs  (+6 more)
general/tests/: test_derive.rs  test_fixtures.rs
pii/: Cargo.toml
pii/src/: builtin.rs  config.rs  convert.rs  legacy.rs  lib.rs  processor.rs
pii/tests/: test_builtin.rs
py/: .craft.yml  .dockerignore  .flake8  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.cross  Makefile  manylinux.sh  pyproject.toml  requirements-build.txt  setup.py
py/semaphore/: __init__.py  _compat.py  _lowlevel.py  _lowlevel__ffi.py  auth.py  consts.py  envelope.py  exceptions.py  processing.py  utils.py
py/sentry_relay/: __init__.py  __init__.pyi  _compat.py  _lowlevel.pyi  auth.py  auth.pyi  consts.py  consts.pyi  envelope.py  exceptions.py  exceptions.pyi  metrics.py  processing.py  processing.pyi  utils.py  webhook_models.py
py/smith/: __init__.py  _compat.py  _lowlevel.py  _lowlevel__ffi.py  auth.py  exceptions.py  utils.py
py/tests/: test_auth.py  test_billing.py  test_consts.py  test_metrics.py  test_processing.py  test_utils.py  test_webhook_models.py
py/tools/: verify_wheel.py
relay-async/: Cargo.toml
relay-async/src/: lib.rs
relay-auth/: Cargo.toml  build.rs
relay-auth/src/: lib.rs
relay-aws-extension/: Cargo.toml  README.md
relay-aws-extension/mock/: README.md  mock-aws-lambda-extensions-api.py  run.sh
relay-aws-extension/src/: aws_extension.rs  lib.rs
relay-base-schema/: Cargo.toml
relay-base-schema/src/: data_category.rs  events.rs  lib.rs  metrics.rs  organization.rs  project.rs  spans.rs
relay-cabi/: Cargo.toml  Makefile  README.md  cbindgen.toml
relay-cabi/include/: relay.h
relay-cabi/src/: auth.rs  codeowners.rs  constants.rs  core.rs  ffi.rs  glob.rs  lib.rs  metrics.rs  processing.rs  utils.rs
relay-cardinality/: Cargo.toml
relay-cardinality/benches/: redis.rs  redis_impl.rs
relay-cardinality/src/: cache.rs  cardinality.lua  config.rs  error.rs  lib.rs  limiter.rs  redis.rs  scope.rs  statsd.rs  utils.rs  window.rs
relay-cogs/: Cargo.toml
relay-cogs/src/: cogs.rs  lib.rs  measurement.rs  recorder.rs  test.rs  time.rs  utils.rs
relay-common/: Cargo.toml
relay-common-actors/: Cargo.toml
relay-common-actors/src/: controller.rs  lib.rs
relay-common/benches/: benches.rs
relay-common/src/: alloc.rs  auth.rs  cell.rs  config.rs  constants.rs  glob.rs  glob2.rs  glob3.rs  lib.rs  log.rs  macros.rs  metrics.rs  pattern.rs  project.rs  retry.rs  serde.rs  time.rs  upstream.rs  utils.rs
relay-config/: Cargo.toml
relay-config/src/: aggregator.rs  byte_size.rs  config.rs  env_arg_override.rs  lib.rs  redis.rs  types.rs  upstream.rs
relay-conventions/: Cargo.toml
relay-conventions/src/: consts.rs  info.rs  lib.rs
relay-crash/: Cargo.toml  build.rs
relay-crash/src/: lib.rs
relay-dashboard/: .gitignore  Cargo.toml  README.md  index.html  main.css
relay-dashboard/src/: main.rs  stats.rs  utils.rs
relay-dynamic-config/: Cargo.toml
relay-dynamic-config/src/: ai.rs  combined.rs  defaults.rs  error_boundary.rs  feature.rs  global.rs  lib.rs  metrics.rs  project.rs  quota.rs  trusted_relay.rs  utils.rs
relay-event-derive/: Cargo.toml
relay-event-derive/src/: lib.rs
relay-event-normalization/: Cargo.toml
relay-event-normalization/src/: clock_drift.rs  event.rs  event_error.rs  geo.rs  legacy.rs  lib.rs  logentry.rs  mechanism.rs  meta_collect.rs  nel.rs  regexes.rs  remove_other.rs  replay.rs  schema.rs  sdk_version.rs  stacktrace.rs  statsd.rs  timestamp.rs  trimming.rs  user_agent.rs  validation.rs
relay-event-schema/: Cargo.toml
relay-event-schema/src/: lib.rs
relay-event-schema/tests/: test_derive.rs
relay-feature-flags/: Cargo.toml
relay-feature-flags/src/: lib.rs  protocol.rs
relay-ffi/: Cargo.toml
relay-ffi-macros/: Cargo.toml
relay-ffi-macros/src/: lib.rs
relay-ffi/src/: lib.rs
relay-ffi/tests/: test_macro.rs
relay-filter/: Cargo.toml
relay-filter/src/: browser_extensions.rs  client_ips.rs  common.rs  common_errors.rs  config.rs  csp.rs  dynamic_sampling.rs  error_messages.rs  generic.rs  generic_filters.rs  health_check.rs  interface.rs  legacy_browsers.rs  lib.rs  localhost.rs  releases.rs  testutils.rs  transaction_name.rs  web_crawlers.rs
(+189944 files in other folders)
