[workspace]
members = ["relay", "relay-*", "relay-*/fuzz/", "tools/*"]
default-members = ["relay"]
resolver = "2"

[profile.dev]
# Debug information slows down the build and increases caches in the
# target folder, but we don't require stack traces in most cases.
debug = false
opt-level = 1

[profile.dev-debug]
# A version of the dev profile with debug information enabled, for e.g. local
# debugging.
inherits = "dev"
debug = true
opt-level = 0

[profile.release]
# In release, however, we do want full debug information to report
# panic and error stack traces to Sentry.
debug = true
lto = "thin"

[profile.release-cabi]
inherits = "release"
lto = true
debug = false
strip = true

[workspace.lints.clippy]
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
str_to_string = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(sentry)'] }

[workspace.dependencies]
relay-auth = { path = "relay-auth" }
relay-base-schema = { path = "relay-base-schema" }
relay-cardinality = { path = "relay-cardinality" }
relay-cogs = { path = "relay-cogs" }
relay-common = { path = "relay-common" }
relay-config = { path = "relay-config" }
relay-conventions = { path = "relay-conventions" }
relay-crash = { path = "relay-crash" }
relay-dynamic-config = { path = "relay-dynamic-config" }
relay-event-derive = { path = "relay-event-derive" }
relay-event-normalization = { path = "relay-event-normalization" }
relay-event-schema = { path = "relay-event-schema" }
relay-ffi = { path = "relay-ffi" }
relay-ffi-macros = { path = "relay-ffi-macros" }
relay-filter = { path = "relay-filter" }
relay-kafka = { path = "relay-kafka" }
relay-log = { path = "relay-log" }
relay-metrics = { path = "relay-metrics" }
relay-monitors = { path = "relay-monitors" }
relay-otel = { path = "relay-otel" }
relay-ourlogs = { path = "relay-ourlogs" }
relay-pattern = { path = "relay-pattern" }
relay-pii = { path = "relay-pii" }
relay-profiling = { path = "relay-profiling" }
relay-prosperoconv = { path = "relay-prosperoconv" }
relay-protocol = { path = "relay-protocol" }
relay-protocol-derive = { path = "relay-protocol-derive" }
relay-quotas = { path = "relay-quotas" }
relay-redis = { path = "relay-redis" }
relay-replays = { path = "relay-replays" }
relay-sampling = { path = "relay-sampling" }
relay-server = { path = "relay-server" }
relay-spans = { path = "relay-spans" }
relay-statsd = { path = "relay-statsd" }
relay-system = { path = "relay-system" }
relay-test = { path = "relay-test" }
relay-threading = { path = "relay-threading" }
relay-ua = { path = "relay-ua" }

ahash = "0.8.12"
android_trace_log = { version = "0.3.0", features = ["serde"] }
# This version is pinned because upgrading it enables backtrace by default without the possibility to disable it
# which will increase processing time for transactions massively.
# Keep it pinned until it's possible to disable backtrace.
anyhow = "=1.0.69"
arc-swap = "1.7.1"
async-trait = "0.1.89"
axum = "0.8.8"
axum-extra = "0.12.5"
axum-server = "0.8.0"
backoff = "0.4.0"
bindgen = "0.72.1"
brotli = "7.0.0"
bytecount = "0.6.9"
bytes = "1.10.1"
bzip2 = "0.6.0"
cadence = "1.6.0"
chrono = { version = "0.4.42", default-features = false, features = [
  "std",
  "serde",
] }
clap = { version = "4.5.48" }
clap_complete = "4.5.48"
cmake = "0.1.54"
console = "0.15.11"
cookie = "0.18.1"
criterion = "0.5.1"
crossbeam-channel = "0.5.15"
data-encoding = "2.9.0"
deadpool = "0.12.3"
debugid = "0.8.0"
dialoguer = "0.11.0"
dynfmt = "0.1.5"
ed25519-dalek = { version = "2.2.0", features = ["digest"] }
enumset = "1.1.10"
either = "1.15.0"
flate2 = "1.1.4"
flume = { version = "0.11.1", default-features = false }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
globset = "0.4.16"
hash32 = "1.0.0"
hashbrown = "0.15.4"
hex = "0.4.3"
hmac = "0.12.1"
hostname = "0.4.1"
http = "1.3.1"
human-size = "0.4.3"
hyper = "1.7.0"
hyper-util = { version = "0.1.17", features = ["tokio"] }
indexmap = "2.11.4"
insta = { version = "1.31.0", features = ["json", "redactions", "ron"] }
ipnetwork = "0.21.1"
itertools = "0.14.0"
json-forensics = "0.1.1"
libc = "0.2.177"
liblzma = "0.4.5"
lru = "0.16.3"
maxminddb = "0.27.0"
md5 = "0.8.0"
memchr = "2.7.6"
mimalloc = { version = "0.1.48", features = ["v3"] }
mime = "0.3.17"
minidump = "0.26.0"
multer = "3.1.0"
num-traits = "0.2.19"
num_cpus = "1.17.0"
objectstore-client = "0.0.14"
opentelemetry-semantic-conventions = { version = "0.31.0" }
opentelemetry-proto = { version = "0.31.0", default-features = false }
papaya = "0.2.3"
parking_lot = "0.12.5"
path-slash = "0.2.1"
pest = "2.8.3"
pest_derive = "2.8.3"
phf = { version = "0.13.1", features = ["macros"] }
phf_codegen = "0.13.1"
pin-project-lite = "0.2.16"
pretty-hex = "0.4.1"
priority-queue = "2.7.0"
proc-macro2 = "1.0.101"
prost = "0.14.3"
prost-types = "0.14.3"
psl = "2.1.148"
quote = "1.0.41"
rand = "0.9.2"
rand_pcg = "0.9.0"
rdkafka = "0.39.0"
rdkafka-sys = "4.10.0"
redis = { version = "1.0.2", default-features = false }
regex = "1.11.3"
regex-lite = "0.1.7"
reqwest = "0.12.23"
rmp-serde = "1.3.0"
semver = "1.0.27"
sentry = { version = "0.41.0", default-features = false, features = [
  # default features, except `release-health` is disabled
  "backtrace",
  "contexts",
  "debug-images",
  "panic",
  "transport",
] }
sentry-core = "0.41.0"
sentry-kafka-schemas = { version = "2.1.14", default-features = false }
sentry-release-parser = { version = "1.4.0", default-features = false, features = [
  "semver-1",
] }
sentry-types = "0.41.0"
sentry_protos = "0.5.0"
serde = { version = "=1.0.228", features = ["derive", "rc"] }
serde-transcode = "1.1.1"
serde-vars = "0.3.1"
serde_bytes = "0.11.17"
serde_json = "1.0.140"
serde_path_to_error = "0.1.20"
serde_test = "1.0.177"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.33"
sha1 = "0.10.6"
sha2 = "0.10.9"
similar-asserts = "1.7.0"
smallvec = { version = "1.15.1", features = ["serde"] }
socket2 = "0.6.2"
sqlparser = "0.60.0"
sqlx = { version = "0.8.6", default-features = false }
statsdproxy = { version = "0.4.1", default-features = false }
symbolic-common = { version = "12.12.3", default-features = false }
symbolic-unreal = { version = "12.12.3", default-features = false }
syn = { version = "2.0.106" }
sync_wrapper = { version = "1.0.2" }
synstructure = { version = "0.13.2" }
sysinfo = "0.35.1"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "=1.49.0", default-features = false }
tokio-util = { version = "0.7.18", default-features = false }
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6.6", default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uaparser = "0.6.4"
unescaper = "0.1.6"
unicase = "2.8.1"
url = "2.5.7"
utf16string = "0.2.0"
uuid = { version = "1.18.1", features = ["serde", "v4", "v7"] }
walkdir = "2.5.0"
zstd = { version = "0.13.3", features = ["experimental"] }
