[workspace]
members = ["relay", "relay-*", "relay-*/fuzz/", "tools/*"]
default-members = ["relay"]
resolver = "2"

[profile.dev]
# Debug information slows down the build and increases caches in the
# target folder, but we don't require stack traces in most cases.
debug = false

[profile.dev.package."*"]
opt-level = 1

[profile.dev-debug]
# A version of the dev profile with debug information enabled, for e.g. local
# debugging.
inherits = "dev"
debug = true

[profile.release]
# In release, however, we do want full debug information to report
# panic and error stack traces to Sentry.
debug = true
lto = "thin"

[profile.release-cabi]
inherits = "release"
lto = true
debug = false
strip = true

[workspace.lints.clippy]
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
str_to_string = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(sentry)'] }

[workspace.dependencies]
relay-auth = { path = "relay-auth" }
relay-base-schema = { path = "relay-base-schema" }
relay-cogs = { path = "relay-cogs" }
relay-common = { path = "relay-common" }
relay-config = { path = "relay-config" }
relay-conventions = { path = "relay-conventions" }
relay-crash = { path = "relay-crash" }
relay-dynamic-config = { path = "relay-dynamic-config" }
relay-event-derive = { path = "relay-event-derive" }
relay-event-normalization = { path = "relay-event-normalization" }
relay-event-schema = { path = "relay-event-schema" }
relay-ffi = { path = "relay-ffi" }
relay-ffi-macros = { path = "relay-ffi-macros" }
relay-filter = { path = "relay-filter" }
relay-kafka = { path = "relay-kafka" }
relay-log = { path = "relay-log" }
relay-metrics = { path = "relay-metrics" }
relay-monitors = { path = "relay-monitors" }
relay-otel = { path = "relay-otel" }
relay-ourlogs = { path = "relay-ourlogs" }
relay-pattern = { path = "relay-pattern" }
relay-pii = { path = "relay-pii" }
relay-profiling = { path = "relay-profiling" }
relay-prosperoconv = { path = "relay-prosperoconv" }
relay-protocol = { path = "relay-protocol" }
relay-protocol-derive = { path = "relay-protocol-derive" }
relay-quotas = { path = "relay-quotas" }
relay-redis = { path = "relay-redis" }
relay-replays = { path = "relay-replays" }
relay-sampling = { path = "relay-sampling" }
relay-server = { path = "relay-server" }
relay-spans = { path = "relay-spans" }
relay-statsd = { path = "relay-statsd" }
relay-system = { path = "relay-system" }
relay-test = { path = "relay-test" }
relay-threading = { path = "relay-threading" }
relay-ua = { path = "relay-ua" }


# Use the section below to define the minimum version of a dependency that
# has the API required for the code to compile.
#
# Use Cargo.lock via `cargo update` to define the exact version
# of dependencies used in builds.
ahash = "0.8"
android_trace_log = { version = "0.3", features = ["serde"] }
# This version is pinned because upgrading it enables backtrace by default without the possibility to disable it
# which will increase processing time for transactions massively.
# Keep it pinned until it's possible to disable backtrace.
anyhow = "=1.0.69"
arc-swap = "1"
async-compression = { version = "0.4", features = [
    "tokio",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
] }
async-trait = "0.1"
axum = "0.8"
axum-extra = "0.12"
axum-server = "0.8"
backon = { version = "1", default-features = false }
bindgen = "0.72"
brotli = "7"
bytecount = "0.6"
bytes = "1"
bzip2 = "0.6"
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "serde",
] }
clap = "4"
clap_complete = "4"
cmake = "0.1"
console = "0.15"
cookie = "0.18"
criterion = "0.5"
data-encoding = "2"
deadpool = "0.12"
debugid = "0.8"
dialoguer = "0.11"
dircpy = "0.3"
dynfmt = "0.1"
ed25519-dalek = { version = "2", features = ["digest"] }
enumset = "1"
either = "1"
flate2 = "1"
flume = { version = "0.11", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std"] }
globset = "0.4"
hash32 = "1"
hashbrown = "0.15"
hex = "0.4"
hmac = "0.12"
hostname = "0.4"
http = "1"
http-body-util = "0.1"
human-size = "0.4"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
indexmap = "2"
insta = { version = "1", features = ["json", "redactions", "ron"] }
ipnetwork = "0.21"
itertools = "0.14"
json-forensics = "0.1"
libc = "0.2"
liblzma = "0.4"
lru = "0.16"
maxminddb = "0.27"
md5 = "0.8"
memchr = "2"
mimalloc = { version = "0.1", features = ["v3"] }
mime = "0.3"
minidump = "0.26"
multer = "3"
metrics = "0.24"
metrics-exporter-dogstatsd = "0.9"
num-traits = "0.2"
num_cpus = "1"
objectstore-client = { version = "0.1", features = ["multipart"] }
opentelemetry-semantic-conventions = "0.31"
opentelemetry-proto = { version = "0.31", default-features = false }
papaya = "0.2"
parking_lot = "0.12"
path-slash = "0.2"
pest = "2"
pest_derive = "2"
phf = { version = "0.13", features = ["macros"] }
phf_codegen = "0.13"
pin-project-lite = "0.2"
pretty-hex = "0.4"
priority-queue = "2"
proc-macro2 = "1"
prost = "0.14"
prost-types = "0.14"
psl = "2"
quote = "1"
rand = "0.9"
rand_pcg = "0.9"
rdkafka = "0.39"
rdkafka-sys = "4"
redis = { version = "1", default-features = false }
matchit = "0.8"
regex = "1"
regex-lite = "0.1"
reqwest = { version = "0.13", default-features = false, features = [
    "native-tls",
] }
rmp-serde = "1"
semver = "1"
sentry = { version = "0.47", default-features = false, features = [
    # default features, except `release-health` is disabled
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "transport",
] }
sentry-core = "0.47"
sentry-kafka-schemas = { version = "2", default-features = false }
sentry-release-parser = { version = "1", default-features = false, features = [
    "semver-1",
] }
sentry-types = "0.41"
sentry_protos = "0.7"
serde = { version = "=1.0.228", features = ["derive", "rc"] }
serde-transcode = "1"
serde-vars = "0.3"
serde_bytes = "0.11"
serde_json = "1"
serde_path_to_error = "0.1"
serde_test = "1"
serde_urlencoded = "0.7"
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
similar-asserts = "1"
smallvec = { version = "1", features = ["serde"] }
socket2 = "0.6"
sqlparser = "0.62"
sqlx = { version = "0.8", default-features = false }
symbolic-common = { version = "12", default-features = false }
symbolic-unreal = { version = "12", default-features = false }
syn = "2"
sync_wrapper = "1"
synstructure = "0.13"
sysinfo = "0.35"
tempfile = "3"
thiserror = "2"
tokio = { version = "=1.49.0", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
uaparser = "0.6"
unescaper = "0.1"
unicase = "2"
url = "2"
utf16string = "0.2"
uuid = { version = "1", features = ["serde", "v4", "v7"] }
walkdir = "2"
zstd = { version = "0.13", features = ["experimental"] }
