[project]
name = "relay"
# see py/setup.py for versioning; we only have this here to make uv happy
# which we intend to use for dependency management, not packaging
version = "0.0.0"

[tool.uv]
environments = ["sys_platform == 'darwin' or sys_platform == 'linux'"]
# This doesn't work; use uv sync --inexact to not uninstall the
# sentry_relay added by uv pip install -v -e py
# override-dependencies = ["sentry_relay; sys_platform == 'never'"]

[[tool.uv.index]]
url = "https://pypi.devinfra.sentry.io/simple"
default = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "blinker>=1.9.0",
    "click>=8.1.7",
    "confluent-kafka==2.12.2",
    "devservices>=1.2.4",
    "flake8>=7.3.0",
    "flask>=3.1.0",
    "msgpack>=1.1.1",
    "mypy>=1.18.2",
    "objectstore-client==0.0.14",
    "opentelemetry-proto>=1.32.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.3",
    "pytest-timeout>=2.2.0",
    "pytest-localserver>=0.8.1",
    "pytest-sentry>=0.3.1",
    "pytest-xdist>=3.5.0",
    "pyyaml>=6.0.3",
    "redis>=5.0.1",
    "requests>=2.32.5",
    "sentry-protos>=0.7.0",
    "sentry-sdk>=2.50.0",
    "types-protobuf>=6.30.2.20250703",
    "types-pyyaml>=6.0.12.20241230",
    "types-redis>=4.6.0.3",
    "types-requests>=2.32.4.20250611",
    "types-setuptools>=74.1.0.20240907",
    "werkzeug>=3.1.3",
    "zstandard>=0.18.0",

    # used for ci build_library
    "setuptools==80.9.0",
    "wheel==0.46.2",
    # used for py/tools/verify_wheel.py
    "packaging==25.0",
    "milksnake>=0.1.6",
]

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
  | target
)/
'''

[tool.mypy]
mypy_path = "py"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "confluent_kafka.*",
    "msgpack.*",
    "pytest_localserver.*",
    "opentelemetry.*",
    "sentry_relay._lowlevel",
    "_cffi_backend",
]
ignore_missing_imports = true
