[project]
name = "relay"
# see py/setup.py for versioning; we only have this here to make uv happy
# which we intend to use for dependency management, not packaging
version = "0.0.0"

[tool.uv]
environments = ["sys_platform == 'darwin' or sys_platform == 'linux'"]
# This doesn't work; use uv sync --inexact to not uninstall the
# sentry_relay added by uv pip install -v -e py
# override-dependencies = ["sentry_relay; sys_platform == 'never'"]

[[tool.uv.index]]
url = "https://pypi.devinfra.sentry.io/simple"
default = true

[dependency-groups]
dev = [
    "black",
    "blinker",
    "click",
    "confluent-kafka",
    "devservices",
    "flake8",
    "flask",
    "msgpack",
    "mypy",
    "objectstore-client",
    "opentelemetry-proto",
    "pre-commit",
    "pytest",
    "pytest-timeout",
    "pytest-localserver",
    "pytest-sentry",
    "pytest-xdist",
    "pyyaml",
    "redis",
    "requests",
    "sentry-protos",
    "sentry-sdk",
    "types-protobuf",
    "types-pyyaml",
    "types-redis",
    "types-requests",
    "types-setuptools",
    "werkzeug",
    "zstandard",

    # used for ci build_library
    "setuptools",
    "wheel",
    # used for py/tools/verify_wheel.py
    "packaging",
    "milksnake",
]

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
  | target
)/
'''

[tool.mypy]
mypy_path = "py"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "confluent_kafka.*",
    "msgpack.*",
    "pytest_localserver.*",
    "opentelemetry.*",
    "sentry_relay._lowlevel",
    "_cffi_backend",
]
ignore_missing_imports = true
