[package]
authors = ["Sentry <hello@sentry.io>"]
description = "The relay <-> backend communcation and authentication protocol"
documentation = "https://docs.rs/semaphore-common"
homepage = "https://github.com/getsentry/semaphore"
license = "MIT"
name = "semaphore-aorta"
repository = "https://github.com/getsentry/semaphore"
version = "0.1.2"

[dependencies]
base64 = "0.9.2"
failure = "0.1.1"
failure_derive = "0.1.1"
futures = "0.1.21"
hyper = "0.11.27"
hyper-tls = "0.1.3"
parking_lot = "0.5.5"
rand = "0.5.0"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.20"
tokio-core = "0.1.17"
url = "1.7.0"
log = "0.4.2"
rust_sodium = "0.9.0"
url_serde = "0.2.0"
base64-serde = "0.3.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.2"

[dependencies.semaphore-common]
path = "../common"

[dependencies.uuid]
features = ["v4", "serde"]
version = "0.6.5"
