[package]
name = "semaphore-cabi"
version = "0.4.40"
license = "MIT"
authors = ["Sentry <hello@sentry.io>"]
homepage = "https://github.com/getsentry/semaphore"
repository = "https://github.com/getsentry/semaphore"
description = "Exposes some internals of the relay to C."
edition = "2018"

[lib]
name = "semaphore"
crate-type = ["cdylib"]

[workspace]

[profile.release]
debug = true
lto = true

[dependencies]
chrono = "0.4.7"
failure = "0.1.5"
serde = {version = "1.0.98", features = ["derive"]}
serde_json = "1.0.40"
uuid = "0.7.4"
json-forensics = { version = "*", git = "https://github.com/getsentry/rust-json-forensics" }

[dependencies.semaphore-common]
path = "../common"

[dependencies.semaphore-general]
path = "../general"
