[package]
name = "relay-cabi"
version = "0.4.65"
authors = ["Sentry <oss@sentry.io>"]
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
description = "Exposes some internals of the relay to C."
edition = "2018"
license-file = "../LICENSE"

[lib]
name = "relay"
crate-type = ["cdylib"]

[workspace]

[profile.release]
debug = true
lto = true

[dependencies]
chrono = "0.4.7"
failure = "0.1.5"
json-forensics = { version = "*", git = "https://github.com/getsentry/rust-json-forensics" }
lazy_static = "1.3.0"
serde = {version = "1.0.98", features = ["derive"]}
serde_json = "1.0.40"
uuid = "0.8.1"

[dependencies.relay-common]
path = "../common"

[dependencies.relay-general]
path = "../general"
