[package]
authors = ["Sentry <oss@sentry.io>"]
description = "Common functionality for the sentry relay"
documentation = "https://docs.rs/semaphore-common"
homepage = "https://github.com/getsentry/semaphore"
name = "semaphore-common"
repository = "https://github.com/getsentry/semaphore"
version = "0.4.65"
edition = "2018"
license-file = "../LICENSE"

[features]
default = []
processing = []

[dependencies]
backoff = "0.1.5"
base64 = "0.10.1"
cadence = "0.17.1"
chrono = "0.4.7"
ed25519-dalek = "0.9.1"
failure = "0.1.5"
lazy_static = "1.3.0"
log = { version = "0.4.8", features = ["serde"] }
human-size = "0.4.0"
num_cpus = "1.11.1"
parking_lot = "0.9.0"
rand = "0.6.5"
regex = "1.2.0"
sentry-types = "0.13.3"
sha2 = "0.8.1"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
serde_yaml = "0.8.9"
url = "2.0.0"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
lru = "0.4.0"
globset = "0.4.4"

[dependencies.semaphore-general]
path = "../general"
