[package]
authors = ["Sentry <hello@sentry.io>"]
description = "Config functionality for the sentry relay"
documentation = "https://docs.rs/semaphore-config"
homepage = "https://github.com/getsentry/semaphore"
license = "MIT"
name = "semaphore-config"
repository = "https://github.com/getsentry/semaphore"
version = "0.1.1"

[dependencies]
chrono = "0.4.2"
failure = "0.1.1"
failure_derive = "0.1.1"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_yaml = "0.7.4"
url = "1.7.0"
url_serde = "0.2.0"
sentry = "0.5.4"
serde_json = "1.0.20"

[dependencies.log]
features = ["serde"]
version = "0.4.2"

[dependencies.semaphore-aorta]
path = "../aorta"

[dependencies.semaphore-common]
path = "../common"
