[package]
name = "semaphore-general"
version = "0.4.63"
authors = ["Sentry <oss@sentry.io>"]
edition = "2018"
license-file = "../LICENSE"

[dependencies]
bytecount = "0.5.1"
chrono = "0.4.7"
cookie = { version = "0.12.0", features = ["percent-encode"] }
debugid = { version = "0.7.0", features = ["serde"] }
dynfmt = { version = "0.1.1", features = ["python", "curly"] }
failure = "0.1.5"
globset = "0.4.4"
hmac = "0.7.1"
ipnetwork = "0.14.0"
itertools = "0.8.0"
lazycell = "1.2.1"
lazy_static = "1.3.0"
maxminddb = "0.13.0"
num-traits = "0.2.8"
regex = "1.2.0"
semaphore-general-derive = { path = "derive" }
sha-1 = "0.8.1"
sha2 = "0.8.0"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
serde_urlencoded = "0.5.5"
smallvec = { version = "0.6.10", features = ["serde"] }
uaparser = { version = "0.3.1", optional = true }
url = "2.0.0"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
pest = "2.1.1"
pest_derive = "2.1.0"

[dev-dependencies]
difference = "2.0.0"
insta = { version = "0.11.0", features =  ["ron", "redactions"] }

[features]
bench = []
default = ["uaparser"]
