[package]
name = "relay-pii"
authors = ["Sentry <oss@sentry.io>"]
description = "PII stripping for Sentry events"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "0.4.65"
edition = "2018"
license-file = "../LICENSE"

[dependencies]
hmac = "0.7.1"
lazy_static = "1.3.0"
lazycell = "1.2.1"
regex = "1.2.0"
relay-general = { path = "../general" }
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
sha-1 = "0.8.1"
sha2 = "0.8.1"
smallvec = { version = "0.6.10", features = ["serde"] }

[dev-dependencies]
insta = "0.12.0"
relay-testutils = { path = "../testutils" }
