[project]
name = "sentry_relay"
# see setup.py for versioning; we only have this here to make uv happy
# which we intend to use for dependency management, not packaging
version = "0.0.0"
# we're using setup.py to populate these fields
dynamic = ["authors", "description", "license", "requires-python"]

# note: still using legacy setup.py for building, so no build-system yet
